cabal-version:      2.4
name:               utxo-combiner
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jonathan Fischoff
maintainer:         jonathangfischoff@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  default-extensions:   OverloadedStrings
                        ScopedTypeVariables
                        MultiParamTypeClasses
                        RecordWildCards
                        TemplateHaskell
                        QuasiQuotes
                        TypeApplications
                        TypeFamilies
                        DataKinds
                        BangPatterns
                        NumericUnderscores
                        LambdaCase
                        NamedFieldPuns

  exposed-modules: Canonical.UTxOCombiner
  build-depends: base
               , optparse-applicative
               , cardano-transaction



  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise


executable utxo-combiner
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends: base
                 , utxo-combiner
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:         -Wall -Werror -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise
